--- a/config.yaml
+++ b/config.yaml
@@ -4,6 +4,8 @@ HEAD:
   mode: rule
   log-level: info
   external-controller: :9090
+  external-ui: /data/clash/ui
+  secret: noremote
   dns:
     enable: true
     listen: 0.0.0.0:1053
@@ -38,6 +40,14 @@ HEAD:
     - +.lan
     - +.microsoft*.com
     - localhost.ptlogin2.qq.com
+    tun:
+      enable: true
+      inet6-address: null
+      stack: system
+      dns-hijack:
+        - any:53
+      auto-route: true
+      auto-detect-interface: true  
 TEST_URL: https://www.gstatic.com/generate_204
 RULESET:
 - - 🛸 PT站
